[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/skills/dash.png" type="Texture" id=1]
[ext_resource path="res://scenes/DashSkill.gd" type="Script" id=2]
[ext_resource path="res://sound_effects/equip_skill.wav" type="AudioStream" id=3]
[ext_resource path="res://sound_effects/hover_skill.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/Animator.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Dash:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractableArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("InteractableArea:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "equip"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Dash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Dash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 129, 126 )

[node name="DashSkill" type="Node2D"]
script = ExtResource( 2 )

[node name="Dash" type="Sprite" parent="."]
position = Vector2( 0, -500 )
texture = ExtResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 1 )
anims/equip = SubResource( 4 )
anims/hover = SubResource( 3 )
script = ExtResource( 5 )

[node name="InteractableArea" type="Area2D" parent="."]
position = Vector2( 0, -500 )
scale = Vector2( 1e-05, 1e-05 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2( 4, 3 )
shape = SubResource( 2 )

[node name="HoverSkillAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="EquipSkillAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="skill_equipped" from="Animator" to="." method="_on_Animator_skill_equipped"]
[connection signal="input_event" from="InteractableArea" to="Animator" method="_on_InteractableArea_input_event"]
[connection signal="mouse_entered" from="InteractableArea" to="Animator" method="_on_InteractableArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractableArea" to="Animator" method="_on_InteractableArea_mouse_exited"]
